--- a/brandcom/package.json
+++ b/brandcom/package.json
@@ -22,6 +22,7 @@
     "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.5",
     "jwt-decode": "^4.0.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^24.0.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
