--- a/brandcom/package.json
+++ b/brandcom/package.json
@@ -39,6 +39,7 @@
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
+    "vite-plugin-sitemap": "^0.8.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
