--- a/domesticia/package.json
+++ b/domesticia/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.2",
+    "vite-plugin-sitemap": "^0.8.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
