--- a/webForm/package.json
+++ b/webForm/package.json
@@ -59,6 +59,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
+    "vite-plugin-sitemap": "^0.8.2",
     "web-push": "^3.6.7",
     "yup": "^1.6.1",
     "zod": "^3.24.2",
